--- a/resources/styles.css
+++ b/resources/styles.css
@@ -11,7 +11,19 @@ h4{
 
 h1{
     text-align: center;
+    border: 5px dotted;
+    width: 500px;
+    margin-left: 500px;
+    margin-right: 500px;
+    margin-top:20px;
 }
+
+.recipe-list{
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+}
+
 .recipe-list li a{
     color: black;
     font-family: 'Courier New', Courier, monospace;
@@ -23,7 +35,20 @@ p{
     font-family: 'Lucida Console', 'Courier New', sans-serif;
 }
 
-.heading-border{
-    border: 10px dotted;
-    width: 0 auto;
+img{
+    border: 4px solid;
+}
+
+.image-flex-container{
+    display: flex;
+}
+
+.flex-item-description{
+    margin-left: 20px;
+    width: 600px;
+    margin-top: 100px;
+}
+
+.flex-item-description h2{
+    text-align: left;
 }
