--- a/resources/styles.css
+++ b/resources/styles.css
@@ -10,19 +10,38 @@ h4{
     font-family: 'Courier New', 'Geogria', sans-serif;
 }
 
+.header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-list{
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    list-style: none;
+}
+
 h1{
-    text-align: center;
+    /* text-align: center;
     border: 5px dotted;
-    width: 500px;
+    width: 400px; */
     margin: 0 auto;
     margin-bottom: 50px;
+    margin-left: 40px;
 } 
+#recipes-heading{
+    margin-left: 5px;
+}
+#recipe-header{
+    margin-left: 40px;
+}
 
 .recipe-list{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 100px;
+    flex-direction: column;
+    gap: 30px;
+    list-style: none;
 }
 
 .recipe-list li a{
