--- a/resources/styles.css
+++ b/resources/styles.css
@@ -12,11 +12,22 @@ h4{
 
 .header{
     display: flex;
-    justify-content: space-between;
+    align-items: baseline;
+    border-bottom: 1px dotted;
+}
+
+.header a{
+    text-decoration: none;
+    color: inherit;
+}
+
+.header span{
+    margin-right: auto;
 }
 
 .nav-list{
     display: flex;
+    flex-wrap: wrap;
     flex: 1;
     justify-content: space-between;
     list-style: none;
@@ -61,7 +72,7 @@ img{
 
 .image-flex-container{
     display: flex;
-    
+    margin-top: 30px;
 }
 
 .flex-item-description{
